res/examples/invalid/call_noncallable_tuple.eg
(1, false, [1, 2, 3],)();

// out: TypeError: tuple<number, bool, list<number>> is not callable